# cputest

./: CMakeLists.txt  bash.sh  main.cpp  mathsandthings.h  new_sbatch.sh
