cmake_minimum_required(VERSION 3.11)
if (MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /EHsc" CACHE INTERNAL "" FORCE)
endif(MSVC)
#list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
#list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(cpu_nbody_test CXX)
add_executable(main "main.cpp" "mathsandthings.h")

FIND_PACKAGE(OpenMP REQUIRED)
if(NOT ${OpenMP_CXX_FOUND})
  message(FATAL_ERROR "OpenMP  NOT FOUND")
endif()

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
